<resources>
    <string name="app_name">GeoQR</string>
    <string name="enter_name_hint">Enter UserName</string>
    <string name="username">Username:</string>
    <string name="login_btn">Login</string>
    <string name="scan_hint">Scan</string>
    <string name="qr_code_hint">QR Code:</string>
    <string name="user_hint">User:</string>
    <string name="default_txt">Loading</string>
    <string name="qr_score_hint">QR Code Score:</string>
    <string name="geo_hint">Geolocation:</string>
    <string name="add_location_switch">Add Location</string>
    <string name="add_photo_switch">Add Photo</string>
    <string name="comment_hint">Click to add comments</string>
    <string name="add_btn">Add</string>
    <string name="add_image">Add Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="qr_content">QR Content:</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="cancel_btn">Cancel</string>
    <string name="generate_login_qr">Generate\nLogin QR</string>
    <string name="generate_status_qr">Generate\nStatus QR</string>
    <string name="logout">Logout</string>
    <string name="content">Content</string>
    <string name="score">Score</string>
    <string name="location">Location:</string>
    <string name="time">Time</string>
    <string name="contact">Contact:</string>
    <string name="enter_contact">Enter Contact</string>
    <string name="edit">Edit</string>
    <string name="click_edit_button_to_add">Click Edit Button To Add</string>
    <string name="contact_x">X</string>
    <string name="contact_o">O</string>
    <string name="date">Date:</string>
    <string name="content_title">Content:</string>
    <string name="score_title">Score:</string>
    <string name="comment_title">Comment:</string>
    <string name="enter_the_comment">Enter the comment</string>
    <string name="delete_qr">Delete QR</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="qr_hex">QR Hex:</string>
    <string name="longitude_text">Longitude:</string>
    <string name="latitude_text">Latitude:</string>

</resources>