<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/default_txt"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/contact_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:text="@string/contact" />

            <TextView
                android:id="@+id/show_contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="15sp"
                android:text="@string/click_edit_button_to_add" />

            <EditText
                android:id="@+id/contact_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:visibility="gone"
                android:textColor="@color/black"
                android:hint="@string/enter_contact"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:minHeight="48dp"
                android:textSize="15sp" />

<!--            <TextView-->
<!--                android:id="@+id/textView2"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:textSize="15sp"-->
<!--                android:layout_marginLeft="5dp"-->
<!--                android:layout_marginRight="5dp"-->
<!--                android:text="@string/default_txt" />-->

            <Button
                android:id="@+id/contact_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:minWidth="0dp"
                android:text="@string/edit"
                android:visibility="visible"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/contact_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:minWidth="0dp"
                android:text="@string/contact_x"
                android:visibility="gone"
                tools:ignore="DuplicateSpeakableTextCheck" />


            <Button
                android:id="@+id/contact_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:minWidth="0dp"
                android:text="@string/contact_o"
                android:visibility="gone"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/highest_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:paddingTop="10dp"
                android:layout_weight="1"
                android:text="@string/default_txt"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lowest_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/default_txt"
                android:layout_weight="1"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:paddingTop="10dp"
                android:layout_weight="1"
                android:text="@string/default_txt"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/total_codes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="10dp"
                android:paddingTop="10dp"
                android:layout_weight="1"
                android:text="@string/default_txt"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="10dp" >

            <Button
                android:id="@+id/generate_login_qr"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/generate_login_qr" />

            <Button
                android:id="@+id/generate_status_qr"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/generate_status_qr" />

            <Button
                android:id="@+id/logout_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:visibility="gone"
                android:text="@string/logout" />

        </LinearLayout>

        <ImageView
            android:id="@+id/showQR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="gone"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/show_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/content"
                android:gravity="center" />

            <TextView
                android:id="@+id/show_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score"
                android:gravity="center" />

            <TextView
                android:id="@+id/show_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/location"
                android:visibility="gone"
                android:gravity="center" />

            <TextView
                android:id="@+id/show_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                android:visibility="gone"
                android:gravity="center" />

        </LinearLayout>

        <ListView
            android:id="@+id/profile_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:visibility="visible" />
        

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/return_to_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

</RelativeLayout>